fix(tk-chips): Fix dark mode light background

--- a/packages/core/src/components/tk-chips/tk-chips.scss
+++ b/packages/core/src/components/tk-chips/tk-chips.scss
@@ -9,7 +9,7 @@
   justify-content: center;
   border-radius: var(--chips-large-radius, 6px);
   border-width: 0px;
-  background-color: var(--static-Light, #fff);
+  background-color: var(--static-light, #fff);
 
   &.removable {
     cursor: pointer;
